--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=naming-server
 server.port=8761
 
+# Eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+# Spring Config
+spring.config.import=optional:configserver:http://localhost:8888
+
+# Actuator
+management.endpoints.web.exposure.include=*
